flux/apps/fluence/api/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fluence
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
