flux/apps/fluence/api/app/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
    - crd-api.${NETWORK}-${PROVIDER}.cloudless.dev
  parentRefs:
    - name: eg-gw
      namespace: ingress
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 8080
          namespace: fluence
